corp_comment(fix): fix feedback-item layout disalignment for new entry

--- a/corp_commment/style.css
+++ b/corp_commment/style.css
@@ -182,6 +182,7 @@ textarea::placeholder {
   background-color: transparent;
 } 
 .feedback__vote {
+  min-width: 37px;
   padding: 5px 9px;
   border-radius: 5px;
   transition: all .2s;
